# Adult_Cencus_Income_Project

./: .env  .gitignore  ProjectNotebook.ipynb  README.md  app.py  app_EDA.py  app_EDA_2.py  app_EDA_DS.py  app_test.py  clean_data_science.ipynb  data_cleaning.py  data_exploration_and_cleaning.ipynb  data_science.ipynb  data_science_skript.py  discrimination_dataset.md  eda_notebook.ipynb  llm_based_eda.ipynb  llm_data_science.ipynb  pyproject.toml  requirements.txt
data_analytics/: classic_eda_notebook.ipynb  data_exploration_and_cleaning.ipynb  llm_based_eda.ipynb
data_science/: app_data_science.ipynb  clean_data_science.ipynb  data_science_skript.py
streamlit_app/: app.py  app_EDA_2.py  app_test.py  data_cleaning_app.py
